Bug fix: Placeholder prompt dialog is cut off on the right-hand side
(part of issue #140)

--- a/src/legacy/chrome/content/style/placeholderPrompt.css
+++ b/src/legacy/chrome/content/style/placeholderPrompt.css
@@ -16,3 +16,17 @@ menulist {
     margin-left: 6px;
     margin-right: 6px;
 }
+
+/* UI hack for Thunderbird 114 and newer */
+dialog[data-dlg-cutoff="true"] #placeholder-value,
+dialog[data-dlg-cutoff="true"] #select-placeholder-value-menu {
+    margin-right: 24px;
+}
+
+#placeholder-value {
+    width: 380px;	
+}
+
+#select-placeholder-value-menu {
+    width: 390px;
+}
